# CombatZone

./: .clangd  .gitignore  CMakeLists.txt  README.md  glb_viewer
assets/models/: bz_background.glb  tank.glb
shaders/: fragment.glsl  gltf.frag  gltf.vert  uv_wireframe.frag  uv_wireframe.geom  vertex.glsl
src/: background.cpp  background.h  camera.cpp  camera.h  entity.cpp  entity.h  implementations.cpp  main.cpp  model.cpp  model.h  scene.cpp  scene.h  shader.cpp  shader.h
